# believe-in-me-engine-demo

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: verify.yml
docs/: architecture.md  content_guidelines.md  redaction_policy.md  reviewer_guide.md  technical_overview.md
examples/: run_demo.py  sample_trace.json
scripts/: content_scan.py  redaction_scan.py
src/believe_engine/: __init__.py  legal_moves.py  metrics.py  rules.py  runner.py  trace.py
src/portfolio_engine/: __init__.py  rng.py  rules.py  runner.py  state.py
tests/: test_legal_moves.py  test_metrics.py  test_runner_determinism.py  test_state.py  test_trace_contract.py
