[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "believe-in-me-engine-core"
version = "0.1.0"
description = "A compact deterministic Python engine for a turn-based resource system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Believe in Me" }]
keywords = ["deterministic-engine", "simulation", "testing", "turn-based"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/Hhhhhhhhhhhh12/believe-in-me-engine-demo"
Documentation = "https://github.com/Hhhhhhhhhhhh12/believe-in-me-engine-demo/blob/main/docs/technical_overview.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
